<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_login_screen"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/didacthgothic"
        android:text="@string/kasper_chat"
        android:textSize="24sp"
        android:textColor="@color/logo_text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:id="@+id/editTextLogin"
        style="@style/EditStyle"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="18dp"
        android:selectAllOnFocus="true"
        android:focusableInTouchMode="true"
        android:id="@+id/editTextPassword"
        style="@style/EditStyle"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLogin" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="7dp"
        android:visibility="gone"
        android:fontFamily="@font/didacthgothic"
        android:text="@string/Do_you_forgot_password"
        android:textColor="@drawable/my_text_view_selector"
        android:textSize="14sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


    <TextView
        android:id="@+id/linkRegister"
        android:textColor="@color/link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/inter_regular"
        android:text="Зарегестрироваться"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView"
        android:backgroundTint="@color/logo_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/is_logo_chat" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="293dp"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/button_login_selector"
        android:fontFamily="@font/signikanegative_sc_regular"
        android:inputType="text"
        android:paddingBottom="4dp"
        android:text="@string/Logout"
        android:textColor="#CFD9EBFF"
        android:textSize="19sp"
        android:tint="#1222AD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextViewEdits" />


</androidx.constraintlayout.widget.ConstraintLayout>