<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/window_login"
    tools:context=".fragment.RegistrationFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/didacthgothic"
        android:text="@string/kasper_chat"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editRegLogin"
        style="@style/EditStyle"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginTop="70dp"
        android:autofillHints=""
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/login"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <EditText
        android:id="@+id/editRegPassword"
        style="@style/EditStyle"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        android:autofillHints=""
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editRegLogin" />

    <TextView
        android:id="@+id/linkSingUp"
        style="@style/link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:clickable="true"
        android:fontFamily="@font/didacthgothic"
        android:text="Войти"
        android:textSize="13sp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/logo_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/is_logo_chat" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/button_login_selector"
        android:fontFamily="@font/signikanegative_sc_regular"
        android:inputType="text"
        android:paddingBottom="4dp"
        android:text="@string/Register"
        android:textColor="#CFD9EBFF"
        android:textSize="19sp"
        android:tint="#1222AD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/editRegPassword"

        tools:ignore="TextViewEdits" />

</androidx.constraintlayout.widget.ConstraintLayout>