<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/chat_list_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    tools:context=".fragment.ChatsListFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvChats"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:foreground="@drawable/shadow_list_chat"
        android:layout_marginTop="9dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        tools:listitem="@layout/item_chat" />

    <LinearLayout

        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingTop="14dp"
        android:paddingEnd="14dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Кнопка слева -->
        <ImageButton
            android:id="@+id/optionsButton"
            style="@style/options_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:contentDescription="@string/add_options_button_description"
            android:scaleType="fitXY" />

        <!-- Пустое пространство для выравнивания -->
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- Две кнопки справа -->
        <ImageButton
            android:id="@+id/searchButton"
            style="@style/search_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:contentDescription="@string/add_search_button_description"
            android:scaleType="fitXY" />

        <ImageButton
            android:id="@+id/addChannelButton"
            style="@style/add_channel_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@color/transparent"
            android:contentDescription="@string/add_channel_description"
            android:scaleType="fitXY" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>